--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: mass-email-backend
     env: python
     buildCommand: "pip install -r backend/requirements.txt"
-    startCommand: "uvicorn backend.main:app --host 0.0.0.0 --port 10000"
+    startCommand: PYTHONPATH=. uvicorn main:app --host 0.0.0.0 --port 10000
     plan: free
     envVars:
       - key: FRONTEND_URL
